adding black formatting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,3 +29,6 @@ jobs:
 
       - name: Run tests
         run: poetry run pytest
+      
+      - name: Run Black check
+        run: poetry run black --check src src tests
